--- a/TM.Wedding.UI/tm-wedding-ui/src/app/info-page/info-page.component.css
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/info-page/info-page.component.css
@@ -24,7 +24,7 @@
 .overlay-div-header {
   font-family: "WeddingCaligraphic";
   font-size: 4rem;
-  color: #c5963c;
+  color: #d8c399;
 }
 
 .overlay-div-sub-header {
