--- a/TM.Wedding.UI/tm-wedding-ui/src/app/couple-info/couple-info.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/couple-info/couple-info.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col">
             <div class="card couple-card fade-in">
-                <img src="../../assets/img/couple_home.jpg" class="card-img-top" alt="..." >
+                <img src="../../assets/img/black_white_couple_union.jpeg" class="card-img-top" alt="..." >
                 <div class="card-body">
                   <h5 class="card-title">Thodoris & Marilena</h5>
                 </div>
