fix counter and menu

--- a/TM.Wedding.UI/tm-wedding-ui/src/app/header/header.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/header/header.component.html
@@ -11,9 +11,9 @@
       <a class="navbar-brand" href="#" style="margin-right:28px;display:none">
         <img src="../../assets/img/custom-nav-logo-white.png" style="width:80px;height:80px">
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      <button class="navbar-toggler flicker-btn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span style="font-size:1.2rem;vertical-align: middle;"><i class="bi bi-list" style="padding-right:8px"></i>Menu</span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
