--- a/TM.Wedding.UI/tm-wedding-ui/src/app/home-carousel/home-carousel.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/home-carousel/home-carousel.component.html
@@ -11,7 +11,7 @@
             </div>
             <div class="container overlay-div-sub-header">
                 <h2>SAVE THE DATE</h2>
-                <div class="overlay-div-day-header">
+                <div class="overlay-div-day-header div_glowing">
                     <h1 class="overlay-div-sub-header-day">24august</h1>
                     <h1 class="overlay-div-sub-header-day"> 2024</h1>
                 </div>
