--- a/TM.Wedding.UI/tm-wedding-ui/src/app/header/header.component.css
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/header/header.component.css
@@ -68,3 +68,43 @@
     display: none;
   }
 }
+
+.flicker-btn {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  background-color: white;
+  color: black;
+  border: none;
+  border-radius: 5px;
+  animation: glowing 2000ms infinite;
+  transition: box-shadow 1s ease-in-out;
+  box-shadow: 0 0 20px rgba(52, 152, 219, 0.8);
+}
+
+@keyframes glowing {
+  0% {
+    background-color: #ffffff;
+    box-shadow: 0 0 5px rgba(52, 152, 219, 0.8);
+  }
+  50% {
+    background-color: white;
+    box-shadow: 0 0 28px rgba(52, 152, 219, 0.8);
+  }
+  100% {
+    background-color: white;
+    box-shadow: 0 0 5px rgba(52, 152, 219, 0.8);
+  }
+}
+
+@keyframes flicker {
+  0%, 24.999%, 27%, 67.999%, 69%, 69.999%, 75%, 100% {
+    opacity: 1;
+  }
+  25%, 26.999%, 70%, 74.999%, 76%, 80.999% {
+    opacity: 0.2;
+  }
+}
